// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KoolTip matches snapshot 1`] = `
<div><button type="button" class="k-button medium rounded outline" id="test-target-id-1234" aria-controls="test-popover-id-1234" data-testid="kpop-button">
    OK
    <!----></button>
  <div id="test-popover-id-1234" role="region" class="k-popover kooltip mt-2  hide-caret" style="width: auto; display: none;" name="fade">
    <!---->
    <div class="k-popover-content">
      <div role="tooltip">I'm inside the tooltip!</div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`KoolTip renders tooltip to the bottom side 1`] = `
<div><button type="button" class="k-button medium rounded outline" id="test-target-id-1234" aria-controls="test-popover-id-1234" data-testid="kpop-button">
    OK
    <!----></button>
  <div id="test-popover-id-1234" role="region" class="k-popover kooltip mt-2  hide-caret" style="width: auto; display: none;" name="fade">
    <!---->
    <div class="k-popover-content">
      <div role="tooltip">I'm on the bottom side!</div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`KoolTip renders tooltip to the left side 1`] = `
<div><button type="button" class="k-button medium rounded outline" id="test-target-id-1234" aria-controls="test-popover-id-1234" data-testid="kpop-button">
    OK
    <!----></button>
  <div id="test-popover-id-1234" role="region" class="k-popover kooltip mr-2  hide-caret" style="width: auto; display: none;" name="fade">
    <!---->
    <div class="k-popover-content">
      <div role="tooltip">I'm on the left side!</div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`KoolTip renders tooltip to the right side 1`] = `
<div><button type="button" class="k-button medium rounded outline" id="test-target-id-1234" aria-controls="test-popover-id-1234" data-testid="kpop-button">
    OK
    <!----></button>
  <div id="test-popover-id-1234" role="region" class="k-popover kooltip ml-2  hide-caret" style="width: auto; display: none;" name="fade">
    <!---->
    <div class="k-popover-content">
      <div role="tooltip">I'm on the right side!</div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`KoolTip renders tooltip to the top side 1`] = `
<div><button type="button" class="k-button medium rounded outline" id="test-target-id-1234" aria-controls="test-popover-id-1234" data-testid="kpop-button">
    OK
    <!----></button>
  <div id="test-popover-id-1234" role="region" class="k-popover kooltip mb-2  hide-caret" style="width: auto; display: none;" name="fade">
    <!---->
    <div class="k-popover-content">
      <div role="tooltip">I'm on the top side!</div>
    </div>
    <!---->
  </div>
</div>
`;
